fix: triumph image not showing

--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -360,7 +360,7 @@
   }
 
   &--4::before {
-    background-image: url('../../../images/triumph-gym.png');
+    background-image: url('../../../images/triumph.png');
   }
 
   &__view,
